[package]
name = "dangerzone-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dangerzone_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dangerzone-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
flate2 = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
