[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dangerzone-rs"
version = "0.1.0"
description = "Convert potentially dangerous documents into safe PDFs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPLv3"}
authors = [{name = "Freedom of the Press Foundation"}]
keywords = ["document", "sanitization", "security", "pdf", "dangerzone"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/almet/dangerzone-rs"
Documentation = "https://github.com/almet/dangerzone-rs#python-library"
Repository = "https://github.com/almet/dangerzone-rs"
Issues = "https://github.com/almet/dangerzone-rs/issues"

[tool.maturin]
module-name = "dangerzone_rs"
